fix: overflow scrolling on demo

--- a/projects/astral-accessibility-demo/src/app/app.component.scss
+++ b/projects/astral-accessibility-demo/src/app/app.component.scss
@@ -19,13 +19,13 @@
     margin-top: 10vh;
     background-color: rgba(255, 255, 255);
     background-color: rgba(255, 255, 255, 0.7);
+    overflow: scroll;
 
     h1 {
       margin: 0;
     }
 
     p {
-      overflow: break-all;
       width: 100%;
     }
   }
